Correct About me and spacing

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .Container{
     display:flex;
     flex-direction: column;
+    justify-content: center;
     width: 400px; 
     height: 500px;
     background-color: bisque;
